# ProofTask

./: README.md  prooftask.py  pyproject.toml
.github/: premium-site.html.gz.b64
.github/workflows/: apply-premium-site.yml  ci.yml  pages.yml
docs/: ai-pr-verification-walkthrough.md  business-model.md  demo-pr-flow.md  demo.md  discovery-call-script.md  first-30-prospects.md  github-workflow.md  github-x-outreach-playbook.md  gtm-outreach-sprint.md  ledger.md  market.md  mvp-scope.md  mvp.md  outreach.md  pilot-offer.md  pilot-report-template.md  positioning.md  roadmap.md
examples/: github_pr_comment_verified.md  github_pr_proof.json  github_pr_task.json  github_pr_trace_summary.md  github_pr_verified_trace.json  invalid_final_trace.json  invalid_mismatched_proof.json  manual_qa_proof.json  manual_qa_task.json  pilot_report_signup_flow.md
schemas/: proof.schema.json  task.schema.json  trace.schema.json
site/: index.html
tests/: test_cli.py
