[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prooftask"
version = "0.1.0"
description = "Human verification layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Alex Saf" }
]
keywords = [
  "ai-agents",
  "human-in-the-loop",
  "verification",
  "qa",
  "agent-safety",
  "traceability"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/safal207/ProofTask"
Issues = "https://github.com/safal207/ProofTask/issues"

[project.scripts]
prooftask = "prooftask:main"

[tool.setuptools]
py-modules = ["prooftask"]
